--- a/app/src/components/TextInput/TextInput.scss
+++ b/app/src/components/TextInput/TextInput.scss
@@ -13,7 +13,6 @@
     border: none;
     padding: 0;
     margin: 0;
-    width: 100%;
     color: white;
     font-family: 'Lato';
     font-size: 0.9em;
